# Algebras_of_Multioperations

./: .gitignore  LICENSE  README.md  setup.cfg  token.pypirc
src/: helpers.py  test.py
src/Algs/: Algebras.py  Exceptions.py  __init__.py
src/Algs/factories/: __init__.py
src/Algs/factories/args_generators/: __init__.py  args_generators.py
src/Algs/factories/closing_by_signature/: __init__.py  closing_by_signature.py
src/Algs/factories/mappings/: __init__.py  mappings.py
src/Algs/factories/metaoperations/: __init__.py  metaoperations.py
