[metadata]
name = algebras_of_multioperations
version = 0.0.1
author = Eremenko Dmitry
author_email = er_92@list.ru
description = calculating algebras of finite sets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EDA-Asp/Algebras_of_Multioperations/
project_urls =
    Bug Tracker = https://github.com/EDA-Asp/Algebras_of_Multioperations/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src